# netbox-service-management

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  pyproject.toml.old  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: publish-pypi.yaml
changelog/: index.html
contributing/: index.html
netbox_service_management/: __init__.py  base_views copy.py  base_views.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_service_management/api/: serializers.py  urls.py  views.py
netbox_service_management/migrations/: 0001_initial.py  0002_added_capability.py  0003_tenant_links.py  0004_alter_tag_related_names.old
netbox_service_management/templates/netbox_service_management/: component-detail.html  component-form.html  component.html  default-detail-new.html  default-detail.html  default-list.html  defaultdetail.html  service-template-detail.html  service-template-group-component-detail.html  service-template-group-detail.html  service.html  solution.html
search/: search_index.json
tests/: __init__.py  test_netbox_service_management.py
