[tool.poetry]
name = "netbox-service-management"
version = "0.1.1"
description = "Netbox Service Management Plugin"
authors = ["Eric Hester <eric.hester@umbrella.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
