[tool.poetry]
name = "netbox-service-management"
version = "0.1.1"
description = "Netbox Service Management Plugin"
authors = [
    {name = "Eric Hester", email = "hester1@clemson.edu"},
]
description = "NetBox plugin for Service Management."
readme = "README.md"

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.optional-dependencies]
test = [
    "black==24.3.0",
    "check-manifest==0.49",
    "flake8",
    "flake8-pyproject",
    "pre-commit==3.7.0",
    "pytest==8.1.1",
]

[project.urls]
Documentation = "https://github.com/erichester76/netbox-service-management/blob/main/README.md"
Source = "https://github.com/erichester76/netbox-service-management"
Tracker = "https://github.com/erichester76/netbox-service-management/issues"

[tool.black]
line-length = 120
target_version = ['py39', 'py310', 'py311', 'py312']

[tool.setuptools.package-data]
netbox_service_management = ["templates/**"]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
