[tool.poetry]
name = "netbox-service-management"
version = "0.2.0"
description = "Netbox Service Management Plugin"
authors = ["Eric Hester <hester1@clemson.edu>"]
readme = "README.md"

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]


[project.urls]
Documentation = "https://github.com/erichester76/netbox-service-management/blob/main/README.md"
Source = "https://github.com/erichester76/netbox-service-management"
Tracker = "https://github.com/erichester76/netbox-service-management/issues"

[tool.black]
line-length = 120
target_version = ['py39', 'py310', 'py311', 'py312']

[tool.setuptools.package-data]
netbox_service_management = ["templates/**"]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
